--- a/SegmentationReview/Resources/UI/SegmentationReview.ui
+++ b/SegmentationReview/Resources/UI/SegmentationReview.ui
@@ -24,7 +24,27 @@
       <string>Likert Score</string>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
-      <item row="3" column="1">
+      <item row="5" column="1">
+       <widget class="QPushButton" name="save_and_next">
+        <property name="text">
+         <string>Save Rating, Open Next</string>
+        </property>
+        <property name="shortcut">
+         <string>Ctrl+Return</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="status_checked_2">
+        <property name="text">
+         <string>Comment:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QPlainTextEdit" name="comment"/>
+      </item>
+      <item row="3" column="0" colspan="2">
        <widget class="QGroupBox" name="buttongroup">
         <property name="minimumSize">
          <size>
@@ -34,119 +54,6 @@
         </property>
         <property name="title">
          <string>Likert Score:</string>
-        </property>
-        <widget class="QRadioButton" name="radioButton_1">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>20</y>
-           <width>201</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>1 - Acceptable,  no changes</string>
-         </property>
-         <property name="shortcut">
-          <string>Shift+Q</string>
-         </property>
-        </widget>
-        <widget class="QRadioButton" name="radioButton_2">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>40</y>
-           <width>221</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>2 - Acceptable,  minor changes</string>
-         </property>
-         <property name="shortcut">
-          <string>Shift+W</string>
-         </property>
-        </widget>
-        <widget class="QRadioButton" name="radioButton_3">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>60</y>
-           <width>231</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>3 - Unacceptable,  major changes</string>
-         </property>
-         <property name="shortcut">
-          <string>Shift+E</string>
-         </property>
-        </widget>
-        <widget class="QRadioButton" name="radioButton_4">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>80</y>
-           <width>221</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>4 - Unacceptable,  not visible </string>
-         </property>
-         <property name="shortcut">
-          <string>Shift+R</string>
-         </property>
-        </widget>
-        <widget class="QRadioButton" name="radioButton_5">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>100</y>
-           <width>358</width>
-           <height>22</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>5 - Bad image</string>
-         </property>
-         <property name="shortcut">
-          <string>Shift+T</string>
-         </property>
-        </widget>
-        <widget class="QPlainTextEdit" name="comment">
-         <property name="geometry">
-          <rect>
-           <x>80</x>
-           <y>125</y>
-           <width>271</width>
-           <height>21</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QLabel" name="status_checked_2">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>130</y>
-           <width>71</width>
-           <height>16</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Comment:</string>
-         </property>
-        </widget>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QPushButton" name="save_and_next">
-        <property name="text">
-         <string>Save Rating, Open Next</string>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+Return</string>
         </property>
        </widget>
       </item>
